# TestingSWIG

./: CMakeLists.txt  README.md  setup.py
mypackage/: __init__.py  cameron.c  cameron.h  cameron.i  demo.c  demo.h  demo.i  main.c
