project(mypackage)
set (UseSWIG_TARGET_NAME_PREFERENCE STANDARD)

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(MYPACKAGE_CONFIG
    mypackage/cameron.i
    mypackage/demo.i
)

# swig_add_library(mypackage LANGUAGE python SOURCES ${MYPACKAGE_CONFIG})

